# ECOM189-big-data-and-machine-learning

./: .gitignore  LICENSE  README.md  hello.py  pmq_debates.csv  pyproject.toml
src/: test_api_connection.py  test_filter_for_pmq.py  test_theyworkforyou_raw_data.py  test_yougov_TMII_analysis.py  test_yougov_TMII_correlation_matrix  test_yougov_TMII_demographic_analysis  test_yougov_TMII_plotlyDB.py  test_yougov_TMII_raw_data.py  test_yougov_TMII_top5_scatterplots.py
