[project]
name = "ecom189-big-data-and-machine-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "fake-useragent>=2.0.3",
    "ipykernel>=6.29.5",
    "lxml>=5.3.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]
